# cartifacts

./: .cspell-dict.txt  .drone.star  .flake8  .gitignore  README.md  app.py  cspell.yaml  pyproject.toml  s3md5.py  tasks.py
.cspell/: common-py-config.dict.txt  common-py.dict.txt  deps.dict.txt  project.dict.txt
cartifacts/: celery.py  rule_engine.py  types.py  util.py
templates/: base.html  home.html
templates/pipeline/: view.html
