[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cartifacts"
version = "1.0.0"
description = "A generic storage mechanism for CI artifacts that don't fit anywhere else."
authors = ["Matthew Gamble <git@matthewgamble.net>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.24.41"
celery = "^5.2.7"
Flask = "^2.1.3"
rule-engine = "^3.5.0"

[tool.poetry.dev-dependencies]
boto3-stubs = {extras = ["s3"], version = "^1.24.41"}

# Code quality packages
bandit = "^1.7.4"
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-annotations-complexity = "^0.0.7"
flake8-bandit = "^3.0.0"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^22.7.1"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.2.1"
flake8-expression-complexity = "^0.0.11"
flake8-isort = "^4.1.2"
flake8-requirements = "^1.6.0"
invoke = "^1.7.1"
isort = "^5.10.1"
mypy = "^0.971"
pep8-naming = "^0.13.1"
celery-types = "^0.13.1"

[tool.black]
target-version = ["py310"]
line-length = 100

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
known_tests = "tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
lines_after_imports = 2
lines_between_sections = 1

[tool.mypy]
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
