[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cartifacts"
version = "1.0.0"
description = "A generic storage mechanism for CI artifacts that don't fit anywhere else."
authors = ["Matthew Gamble <git@matthewgamble.net>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.41"
celery = "^5.2.7"
Flask = "^2.2.2"
rule-engine = "^3.5.0"

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.4"
black = "^22.12.0"
boto3-stubs = {extras = ["s3"], version = "^1.26.41"}
flake8 = "^5.0.4"
flake8-annotations-complexity = "^0.0.7"
flake8-bandit = "^3.0.0"
flake8-black = "^0.3.6"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^22.12.6"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.10.1"
flake8-eradicate = "^1.4.0"
flake8-expression-complexity = "^0.0.11"
flake8-isort = "^4.2.0"
flake8-requirements = "^1.7.5"
invoke = "^1.7.3"
isort = "^5.11.4"
mypy = "^0.971"
pep8-naming = "^0.13.3"

[tool.black]
target-version = ["py310", "py311"]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
lines_after_imports = 2

[tool.mypy]
check_untyped_defs = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "celery",
    "rule_engine",
]
ignore_missing_imports = true
